# mdpaste

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  devenv.nix  flake.nix  prek.toml  skills-lock.json
.cargo/: config.toml
.claude/rules/: build-env.md  release.md
.entire/logs/: CLAUDE.md
.github/workflows/: CLAUDE.md  ci.yml  nix.yml  release.yml  windows.yml
HomebrewFormula/: mdpaste.rb
scripts/: release.sh
src/: CLAUDE.md  cli.rs  clipboard.rs  config.rs  main.rs  markdown.rs  naming.rs
src/backend/: local.rs  mod.rs  nodebb.rs  r2.rs
