[package]
name = "mdpaste"
version = "0.6.1"
edition = "2021"
description = "Paste clipboard image as Markdown link"

[[bin]]
name = "mdpaste"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.0"
anyhow = "1"
chrono = "0.4"
image = "0.25"
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "cookies", "json", "rustls-tls"] }
reqwest_cookie_store = { version = "0.8", features = ["serde"] }
cookie_store = { version = "0.21", features = ["serde_json"] }
serde_json = "1"

[dev-dependencies]
mockito = "1"
