[package]
name = "mdpaste"
version = "0.8.0"
edition = "2021"
description = "Paste clipboard image as Markdown link"
license = "MIT"
repository = "https://github.com/daaa1k/mdpaste"

[[bin]]
name = "mdpaste"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.0"
anyhow = "1"
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "tiff", "webp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aws-sdk-s3 = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "cookies", "json", "rustls-tls"] }
reqwest_cookie_store = { version = "0.8", features = ["serde"] }
cookie_store = { version = "0.21", features = ["serde_json"] }
serde_json = "1"

[dev-dependencies]
mockito = "1"

# ── Build-time optimizations ──────────────────────────────────────────────────
# Reduce debug info from level 2 → 1 in dev/test builds.
# Level 1 keeps file/line info for backtraces but skips per-variable DWARF,
# cutting compile time and linker work without hurting developer experience.
[profile.dev]
debug = 1

[profile.test]
debug = 1
